# OJTool

./: .gitignore  .gitmodules  AtCoder.cpp  AtCoder.hpp  CMakeLists.txt  CYEZOJ.cpp  CYEZOJ.hpp  Codeforces.cpp  Codeforces.hpp  Curl.cpp  Curl.hpp  Etiger.cpp  Etiger.hpp  Exception.cpp  Exception.hpp  Luogu.cpp  Luogu.hpp  MD5.hpp  OJ.hpp  PredictLuoguCaptcha.py  README.md  Run.bat  Run.sh  StringOperation.cpp  StringOperation.hpp  Tool.cpp  Tool.hpp  USACO.cpp  USACO.hpp  UVa.cpp  UVa.hpp  XMOJ.cpp  XMOJ.hpp  aes.min.js  main.cpp
.github/workflows/: CMake.yml
Lib/tinyxml/: tinyxml.cpp
Lib2/tinyxml/: xmltest.cpp
LuoguCaptchaModule/: GenerateAndTrain.sh  GenerateData.php  GenerateData.py  Predict.py  Train.py  gen.php  gen.py  keras_metadata.pb  predict.py  saved_model.pb  train.py  variables.index
LuoguCaptchaModule/Logs/train/: events.out.tfevents.1718681226.608-07.162460.0.v2  events.out.tfevents.1718682186.608-07.173703.0.v2  events.out.tfevents.1718683918.608-07.198043.0.v2
LuoguCaptchaModule/Logs/validation/: events.out.tfevents.1718682222.608-07.173703.1.v2  events.out.tfevents.1718684277.608-07.198043.1.v2
